# learning-rust

./: Cargo.toml  Makefile.toml  Shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repo/: mod.rs  postgres_film.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
front/src/: main.rs
front/src/api/: film.rs  mod.rs
front/src/components/: button.rs  film.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs  film_visibility.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  model.rs  request.rs
static/: index.html
