[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log="0.4.14"
wasm-logger= "0.2.0"
reqwest = { version = "0.12.8", features = ["json"] }
thiserror = "1.0.29"

