[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.47.0",features = ["postgres"] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing="0.1"